# minear

./: README.md  debug.hpp  main.cpp  minear.hpp
src/: debug.hpp  minear.hpp  test.cpp
test/: CMakeLists.txt  base.cpp  main.cpp  memory.cpp
